fix header disappear in iframe on mobile issue

--- a/css/base.css
+++ b/css/base.css
@@ -10661,6 +10661,9 @@ input[type="checkbox"]:checked + .switch-toggle:after, input[type="radio"]:check
   left: 0;
   width: 100%;
   z-index: 30;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
   -webkit-transition: background-color 0.3s cubic-bezier(0.4, 0, 0.2, 1), box-shadow 0.15s linear;
   transition: background-color 0.3s cubic-bezier(0.4, 0, 0.2, 1), box-shadow 0.15s linear;
 }
