--- a/sass/theme/_header.scss
+++ b/sass/theme/_header.scss
@@ -7,6 +7,7 @@
 	width: 100%;
 	z-index: $header-base;
 	@include clearfix();
+	@include transform(translateZ(0));
 	@include transition(background-color 0.3s $timing, box-shadow 0.15s linear);
 	&.fixed,
 	&.open,
